add doc form get user favorite
